refactored Tableau component to use css modules and fixed desktop layout bug for dropdown caret

--- a/src/components/dropdown/dropdown.module.css
+++ b/src/components/dropdown/dropdown.module.css
@@ -1,4 +1,6 @@
-.navbarLink:not(.is-arrowless)::after {
-  transform: rotate(var(--deg, 45deg));
-  transition: transform 0.33s;
+@media screen and (max-width: 1023px) {
+  .navbarLink:not(.is-arrowless)::after {
+    transform: rotate(var(--deg, -45deg));
+    transition: transform 0.33s;
+  }
 }
